# lxinput

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  configure.in
data/: lxinput.desktop.in  lxinput.glade  lxinput.ui
debian/: changelog  control  copyright  rules  watch
debian/apport/: source_lxinput.py
man/: Makefile.am  lxinput.1  lxinput.sgml  lxinput.xml
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lg.po  lt.po  lxinput-is.po  (+32 more)
src/: Makefile.am  lxinput.c
